<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detalleVideoJuego.DetalleVideoJuegoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarDetalle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:navigationIcon="?attr/homeAsUpIndicator"
                android:theme="@style/ToolbarTheme"
                app:title="">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerDetailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                app:shimmer_base_alpha="0.5"
                shimmer:duration="800">

                <include
                    layout="@layout/detalle_video_juego_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagenDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tituloDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imagenDetalle"
                    tools:text="Call Of Duty: Warzone" />

                <TextView
                    android:id="@+id/generoDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/genero_shape"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/medium_dark"
                    app:layout_constraintStart_toStartOf="@+id/tituloDetalle"
                    app:layout_constraintTop_toBottomOf="@+id/tituloDetalle"
                    tools:text="Shooter" />

                <TextView
                    android:id="@+id/plataformaDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/genero_shape"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/medium_dark"
                    app:layout_constraintBottom_toBottomOf="@+id/generoDetalle"
                    app:layout_constraintStart_toEndOf="@+id/generoDetalle"
                    app:layout_constraintTop_toTopOf="@+id/generoDetalle"
                    tools:text="Windows" />

                <TextView
                    android:id="@+id/fechaLanzamiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/genero_shape"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/medium_dark"
                    app:layout_constraintBottom_toBottomOf="@+id/plataformaDetalle"
                    app:layout_constraintStart_toEndOf="@+id/plataformaDetalle"
                    app:layout_constraintTop_toTopOf="@+id/plataformaDetalle"
                    tools:text="2020-03-10" />

                <TextView
                    android:id="@+id/tituloAcercaDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/acerca_de"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    app:layout_constraintStart_toStartOf="@+id/generoDetalle"
                    app:layout_constraintTop_toBottomOf="@+id/generoDetalle" />

                <!-- Description -->
                <TextView
                    android:id="@+id/descripcionDetalleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="6dp"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:maxLines="3"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tituloAcercaDe"
                    tools:text="A standalone free-to-play battle royale and modes accessible via Call of Duty: Modern Warfare." />

                <ImageView
                    android:id="@+id/expandMoreDrawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    style="@style/verMasDrawable"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descripcionDetalleTextView" />

                <View
                    android:id="@+id/viewLineAbout"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/light_gray_alternative"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expandMoreDrawable" />

                <!-- System Req Layout -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/requerimientosSistemaConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewLineAbout">

                    <TextView
                        android:id="@+id/tituloSistemaRequerido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/requerimientos_del_sistema"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/osTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/os"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tituloSistemaRequerido" />

                    <TextView
                        android:id="@+id/sistemaRequeridoOS"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/osTextView"
                        app:layout_constraintTop_toTopOf="@+id/osTextView"
                        tools:text="Windows 10" />

                    <TextView
                        android:id="@+id/cpuTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/cpu"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/osTextView" />

                    <TextView
                        android:id="@+id/sistemaRequeridoCPU"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cpuTextView"
                        app:layout_constraintTop_toBottomOf="@+id/sistemaRequeridoOS"
                        tools:text="Intel Core i5-2500K" />

                    <TextView
                        android:id="@+id/ramTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/ram"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cpuTextView" />

                    <TextView
                        android:id="@+id/sistemaRequeridoRAM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ramTextView"
                        app:layout_constraintTop_toBottomOf="@+id/sistemaRequeridoCPU"
                        tools:text="8GB" />

                    <TextView
                        android:id="@+id/storageTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/memoria"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ramTextView" />

                    <TextView
                        android:id="@+id/sistemaRequeridoStorage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/storageTextView"
                        app:layout_constraintTop_toBottomOf="@+id/sistemaRequeridoRAM"
                        tools:text="90GB" />

                    <TextView
                        android:id="@+id/graphicTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/tarjeta_grafica"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/storageTextView" />

                    <TextView
                        android:id="@+id/sistemaRequeridoGraphics"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/graphicTextView"
                        app:layout_constraintTop_toBottomOf="@+id/sistemaRequeridoStorage"
                        tools:text="NVIDIA GeForce GTX 970 " />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/viewLineRequerimientosSistema"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/light_gray_alternative"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/requerimientosSistemaConstraintLayout" />

                <TextView
                    android:id="@+id/capturasPantallaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/capturas_de_pantalla"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewLineRequerimientosSistema" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/capturasPantallaRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/capturasPantallaTextView"
                    tools:listitem="@layout/item_captura_pantalla" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
